--- a/scss/layout/_page.scss
+++ b/scss/layout/_page.scss
@@ -11,3 +11,13 @@ html {
 body {
   font-family: $primary-font-family;
 }
+
+.headers {
+  font-family: 'Raleway', sans-serif;
+  font-size: 3rem;
+  line-height: 3.3rem;
+}
+
+.container {
+  margin: 0 3.6rem 0 3.6rem;
+}
