--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -1,28 +1,28 @@
-@import '../abstracts/variables';
+@import "../abstracts/variables";
 
 @mixin sm {
-  @media (min-width: #{$screen-sm-min}) {
-    @content;
-  }
+	@media (min-width: #{$screen-sm-min}) {
+		@content;
+	}
 }
 
 // Medium devices
 @mixin md {
-  @media (min-width: #{$screen-md-min}) {
-    @content;
-  }
+	@media (min-width: #{$screen-md-min}) {
+		@content;
+	}
 }
 
 // Large devices
 @mixin lg {
-  @media (min-width: #{$screen-lg-min}) {
-    @content;
-  }
+	@media (min-width: #{$screen-lg-min}) {
+		@content;
+	}
 }
 
 // Extra large devices
 @mixin xl {
-  @media (min-width: #{$screen-xl-min}) {
-    @content;
-  }
+	@media (min-width: #{$screen-xl-min}) {
+		@content;
+	}
 }
