--- a/scss/layout/_all.scss
+++ b/scss/layout/_all.scss
@@ -1,9 +1,10 @@
-@import 'footer';
-@import 'header';
-@import 'page';
-@import 'sell_more';
-@import 'the_most_pop';
-@import 'be_always_first.scss';
-@import 'pricing.scss';
-@import 'form_contacts.scss';
-@import 'footer.scss';
+@import "footer";
+@import "header";
+@import "page";
+@import "sell_more";
+@import "the_most_pop";
+@import "be_always_first.scss";
+@import "pricing.scss";
+@import "form_contacts.scss";
+@import "footer.scss";
+@import "calculator.scss";
